--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Tu peux appuyer sur le boutton "Test" pour voir que le contenu de la balise <code>span</code> avec l'id content est modifié 
         </p>
         <p>
-            Le contenu suivant est modifié lorsque tu appuis sur le bouton : ➡️ <span id="content">Coucou</span> ⬅️
+            Le contenu suivant est modifié lorsque tu appuis sur le bouton : &#10145 <span id="content">Coucou</span> &#11013
         </p>
         <button class="btn btn-success">Test</button>
         <p class="heure"></p>
